# brybox

./: .gitignore  CHANGELOG.md  README.md  logging_config.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: audiora_rules.example.json  doctopus_sorting_rules.example.json  email_delete_list.example.csv  email_delete_list.example.json  email_rules.example.json  extraction_rules.example.json  metadata_triggers.example.json  paths.example.json  pixelporter_paths.example.json
src/brybox/: __init__.py
src/brybox/core/: doctopus.py  inbox_kraken.py  web_marionette.py
src/brybox/core/audiora/: __init__.py  audiora.py  deduplicator.py  file_ops.py  filename.py  metadata.py  path_builder.py
src/brybox/core/doctopus/: doctopus.py  extraction.py  file_ops.py  path_builder.py
src/brybox/core/doismith/: __init__.py  doismith.py  extraction.py  path_builder.py
src/brybox/core/inbox_kraken/: classifier.py  engine.py  fetcher.py  handlers.py  helpers.py  preview.py
src/brybox/core/models/: __init__.py  document.py  email.py  image.py  literature.py  videos.py
src/brybox/core/pixelporter/: __init__.py  staging.py  (+7 more)
src/brybox/events/: bus.py  models.py  verifier.py
src/brybox/exceptions/: __init__.py  audio.py  base.py  documents.py  emails.py  images.py  literature.py  scrapers.py  transfers.py  videos.py
src/brybox/utils/: apple_files.py  config_loader.py  credentials.py  deduplicator.py  file_ops.py  health_check.py  logging.py  naming.py  settings.py  specialized_tools.py
src/brybox/web_marionette/: __init__.py  models.py  scrapers.py
(+46 files in other folders)
